NO.1 update code style

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,9 @@
         <!--主页-->
         <activity android:name=".MainActivity"/>
 
+        <!--注册-->
+        <activity android:name=".ui.RegUserActivity"/>
+
         <!--登录-->
         <activity android:name=".ui.LoginActivity"/>
 
