--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,9 +18,14 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     //Bmob
     implementation 'cn.bmob.android:bmob-im:2.1.1@aar'
     implementation 'cn.bmob.android:bmob-sdk:3.6.3'
+    //CircleImageView
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
