NO.5 IM Friend List done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,6 +110,9 @@
         <!--聊天-->
         <activity android:name=".ui.ChatActivity" />
 
+        <!--二维码-->
+        <activity android:name=".ui.MyQrCodeActivity"/>
+
     </application>
 
 </manifest>
