--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     implementation 'org.litepal.android:java:3.0.0'
     //Eventbus
     implementation 'org.greenrobot:eventbus:3.1.1'
+    //Zxing
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
 }
