--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     //Zxing
     implementation 'cn.yipianfengye.android:zxing-library:2.2'
+    //WheelView
+    implementation 'com.contrarywind:Android-PickerView:4.1.6'
 }
