NO.10 News List done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,6 +126,9 @@
         <!--修改密码-->
         <activity android:name=".ui.ChangePwActivity" />
 
+        <!--新闻详情-->
+        <activity android:name=".ui.NewsContentActivity" />
+
     </application>
 
 </manifest>
