--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,10 @@ dependencies {
     implementation 'cn.yipianfengye.android:zxing-library:2.2'
     //WheelView
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
+    //RxVolley
     implementation ('com.kymjs.rxvolley:rxvolley:1.1.4') {
         exclude group: 'io.reactivex'
     }
+    //PhotoView
+    implementation 'com.github.chrisbanes:PhotoView:1.3.0'
 }
