--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,11 @@ android {
         }
     }
 }
-
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -38,9 +42,11 @@ dependencies {
     //WheelView
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
     //RxVolley
-    implementation ('com.kymjs.rxvolley:rxvolley:1.1.4') {
+    implementation('com.kymjs.rxvolley:rxvolley:1.1.4') {
         exclude group: 'io.reactivex'
     }
     //PhotoView
     implementation 'com.github.chrisbanes:PhotoView:1.3.0'
+    //Baidu Map
+    implementation files('libs/BaiduLBS_Android.jar')
 }
